# MokA

./: .gitignore  cm.sh  plan.md  pyproject.toml
AudioVisualText/: check_accelerate.py  check_accelerate2.py  requirements.txt  test_cuda.py  trainer.py
AudioVisualText/configs/: unified_config.py
AudioVisualText/dataset/: pretrain_dataset.py  unified_dataset.py
AudioVisualText/deepspeed/: stage3-no-offload.json  stage3-offload.json
AudioVisualText/models/: modeling_llama.py  multimodal_encoder.py  my_modeling_utils.py  my_utils.py  unified_arch.py
AudioVisualText/peft_hyper/tuners/: lora.py
AudioVisualText/prepared_datasets/: README_DATA_LAYOUT.md
AudioVisualText/scripts/pretrain/: download_video_llava_subset.py  prepare_audiocaps.py  prepare_audiocaps_500_100.sh  prepare_audiocaps_500_100_windows.ps1  pretrain.py  pretrain_audio_windows.ps1  smoke_train_4060ti.sh  smoke_train_A800.sh
AudioVisualText/scripts/smoke_test/: infer_ave_smoke.sh  inference_cut_smoke.py
AudioVisualText/smoke_test_data/AVE_data/: test_samples_ave.json
AudioVisualText/smoke_test_data/AVE_data/converted_label/: test_sample_01.txt  test_sample_02.txt
